Fixed spacing issue for albums

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,3 +59,10 @@ input[type="text"]{
   vertical-align: top;
   margin: 5px;
 }
+
+.album {
+  display: inline-block;
+  vertical-align: top;
+  margin: 1px;
+
+}
